@@ -487,5 +487,32 @@
         </pluginManagement>
       </build>
     </profile>
+    <profile>
+      <id>java17-plus-surefire</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  --add-opens=java.base/java.math=ALL-UNNAMED
+                  --add-opens=java.base/java.net=ALL-UNNAMED
+                  --add-opens=java.base/java.lang=ALL-UNNAMED
+                  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                  --add-opens=java.base/java.util=ALL-UNNAMED
+                  --add-opens=java.base/java.text=ALL-UNNAMED
+                  --add-opens=java.base/java.io=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
   </profiles>
 </project>
